Adding an @modules and minor code reformatting